feat(stats): enhance stats reporting with last entry date, missing days count, and streaks